force-app/main/default/objects/Employee_Document__c/fields/ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionId__c</fullName>
    <label>ContentVersionId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>