force-app/main/default/objects/Employee_Document__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <referenceTo>Documents__c</referenceTo>
    <relationshipLabel>Employee Documents</relationshipLabel>
    <relationshipName>Employee_Documents</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>