force-app/main/default/objects/Employee_Document__c/fields/Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uploaded</label>
    <type>Checkbox</type>
</CustomField>