force-app/main/default/objects/Employee_Document__c/fields/Uploaded_File__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_File__c</fullName>
    <formula>IF(ContentVersionId__c!=null,
 HYPERLINK(&apos;/sfc/servlet.shepherd/version/download/&apos;+ContentVersionId__c+&apos;?operationContext=S1&apos;,&apos;View File&apos;,&apos;_blank&apos;)  
,&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uploaded File</label>
    <type>Text</type>
</CustomField>