force-app/main/default/objects/Employee_Document__c/fields/Uploaded_Formula__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Formula__c</fullName>
    <formula>If( Uploaded__c, IMAGE(&apos;/resource/1568801836000/UploadIcon&apos;,&apos;&apos;, 25, 25) ,&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uploaded</label>
    <type>Text</type>
</CustomField>