force-app/main/default/objects/Employee_Document__c/recordTypes/Employee_Document.recordType-meta.xml
<RecordType>
    <fullName>Employee_Document</fullName>
    <active>true</active>
    <label>Employee Document</label>
</RecordType>